syntax = "proto3";

package product;

option go_package = "order-service/proto/product";

// ProductService defines the gRPC service for product operations
service ProductService {
  // GetProduct retrieves product information by product ID
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  
  // CheckStock checks if product has enough stock
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  
  // UpdateStock updates product stock (increase or decrease)
  rpc UpdateStock(UpdateStockRequest) returns (UpdateStockResponse);
}

// GetProductRequest is the request message for GetProduct
message GetProductRequest {
  uint32 product_id = 1;
}

// GetProductResponse is the response message for GetProduct
message GetProductResponse {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  string image_url = 7;
  string created_at = 8;
}

// CheckStockRequest is the request message for CheckStock
message CheckStockRequest {
  uint32 product_id = 1;
  int32 quantity = 2;
}

// CheckStockResponse is the response message for CheckStock
message CheckStockResponse {
  bool available = 1;
  int32 current_stock = 2;
  string message = 3;
}

// UpdateStockRequest is the request message for UpdateStock
message UpdateStockRequest {
  uint32 product_id = 1;
  int32 quantity = 2;  // positive to increase, negative to decrease
}

// UpdateStockResponse is the response message for UpdateStock
message UpdateStockResponse {
  bool success = 1;
  int32 new_stock = 2;
  string message = 3;
}