syntax = "proto3";

package product;

option go_package = "product-service/proto/product";

// Product Service Definition
service ProductService {
  // Create a new product
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  
  // Get product by ID
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  
  // Get all products with pagination
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  
  // Update product
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  
  // Delete product
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  
  // Search products
  rpc SearchProducts(SearchProductsRequest) returns (ListProductsResponse);
}

// Messages
message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  repeated string images = 7;
  string created_at = 8;
  string updated_at = 9;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string category = 5;
  repeated string images = 6;
}

message GetProductRequest {
  uint32 id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListProductsResponse {
  repeated Product products = 1;
  int64 total = 2;
  int32 page = 3;
  int32 limit = 4;
  int32 total_pages = 5;
}

message UpdateProductRequest {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category = 6;
  repeated string images = 7;
}

message DeleteProductRequest {
  uint32 id = 1;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message SearchProductsRequest {
  string keyword = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ProductResponse {
  Product product = 1;
}